<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">newsearch</string>
  	<string name="search_hint">Search Books</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item>Browse</item>
        <item>Add</item>
        <item >Notifications</item>
        <item>History</item>
        <item >Current Issued</item>
        <item>Favourites</item>
        <item>Profile</item>
    </string-array>
    
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="roll_no">Roll Number</string>
    

</resources>
