<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.login.MainActivity" >

    <EditText
        android:id="@+id/username"
        android:layout_width="440dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:hint="@string/username_hint"
        />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="440dp"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

        <requestFocus />

        <Button
            android:id="@+id/register_button"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/register_button"
            android:textColor="#ffffff" 
            android:textSize="20sp"
            android:background="#191970"/>
        	

        <Button
            android:id="@+id/login"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:layout_below="@+id/register_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/login_button"
            android:textColor="#ffffff" 
            android:textSize="20sp"
            android:background="#4eecba"/>

</RelativeLayout>